[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/showtime-font/Showtime-R9Ke.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/right.png" type="Texture" id=2]
[ext_resource path="res://assets/up-arrow.png" type="Texture" id=3]
[ext_resource path="res://assets/down.png" type="Texture" id=4]
[ext_resource path="res://scenes/HowToPage.gd" type="Script" id=5]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/board.png" type="Texture" id=7]
[ext_resource path="res://scenes/Indicator.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/cards.png" type="Texture" id=9]
[ext_resource path="res://scenes/HowTo.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 76
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[node name="HowTo2D" type="Node2D"]
script = ExtResource( 10 )

[node name="HowToPage" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 512.0
margin_top = 80.0
margin_right = 512.0
margin_bottom = 80.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="HowToPage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.0
margin_top = -49.5
margin_right = 209.0
margin_bottom = 49.5
custom_fonts/font = SubResource( 1 )
text = "How to Play"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HowToPage"]
anchor_bottom = 1.0
margin_left = -500.0
margin_top = 140.0
margin_right = -386.0
margin_bottom = 324.0
alignment = 1

[node name="Control" type="Control" parent="HowToPage/VBoxContainer"]
margin_right = 195.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="Up" type="Label" parent="HowToPage/VBoxContainer"]
margin_top = 44.0
margin_right = 195.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 2 )
text = "Roll Forward"

[node name="Down" type="Label" parent="HowToPage/VBoxContainer"]
margin_top = 88.0
margin_right = 195.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
text = "Roll Backward	"

[node name="Left" type="Label" parent="HowToPage/VBoxContainer"]
margin_top = 132.0
margin_right = 195.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 2 )
text = "Roll Left"

[node name="Right" type="Label" parent="HowToPage/VBoxContainer"]
margin_top = 176.0
margin_right = 195.0
margin_bottom = 216.0
custom_fonts/font = SubResource( 2 )
text = "Roll Right"

[node name="VBoxContainer2" type="VBoxContainer" parent="HowToPage"]
margin_left = -264.0
margin_top = 202.0
margin_right = -224.0
margin_bottom = 242.0
rect_scale = Vector2( 1, 0.973097 )

[node name="UpArrow" type="Sprite" parent="HowToPage/VBoxContainer2"]
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 3 )

[node name="DownArrow" type="Sprite" parent="HowToPage/VBoxContainer2"]
position = Vector2( 0, 46 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 4 )

[node name="LeftArrow" type="Sprite" parent="HowToPage/VBoxContainer2"]
position = Vector2( 0, 92 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 3 )

[node name="RightArrow" type="Sprite" parent="HowToPage/VBoxContainer2"]
position = Vector2( 0, 138 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 2 )

[node name="Back" type="Button" parent="HowToPage"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = 420.0
margin_right = 120.0
margin_bottom = 489.0
custom_fonts/font = SubResource( 3 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Board" type="Sprite" parent="HowToPage"]
position = Vector2( 0, 256 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 128, 128, 384, 256 )

[node name="Player" parent="HowToPage" instance=ExtResource( 6 )]
position = Vector2( -32, 224 )
z_index = 1

[node name="IndicatorN" parent="HowToPage" instance=ExtResource( 8 )]
z_index = 1

[node name="IndicatorS" parent="HowToPage" instance=ExtResource( 8 )]
z_index = 1

[node name="IndicatorE" parent="HowToPage" instance=ExtResource( 8 )]
z_index = 1

[node name="IndicatorW" parent="HowToPage" instance=ExtResource( 8 )]
z_index = 1

[node name="SpecialTimer" type="Timer" parent="HowToPage"]
wait_time = 2.0
one_shot = true

[node name="Dollar" type="Sprite" parent="HowToPage"]
visible = false
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 3, 3 )
z_index = 2
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 896, 0, 128, 128 )

[connection signal="pressed" from="HowToPage/Back" to="." method="_on_Back_pressed"]
[connection signal="timeout" from="HowToPage/SpecialTimer" to="HowToPage" method="_on_SpecialTimer_timeout"]
